// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vhtml-loader htmlwebpackplugin magic can access htmlWebpackPlugin.options from the template 1`] = `
<html>
  <head>
    <title>
      test
    </title>
  </head>
</html>
`;

exports[`vhtml-loader htmlwebpackplugin magic templates out files included by htmlwebpackplugin 1`] = `
<html>
  <body>
    <script type="text/javacript"
            src="bundle.js"
    >
    </script>
  </body>
</html>
`;

exports[`vhtml-loader renders the module source 1`] = `
"var h = __non_webpack_require__(\\"../../node_modules/vhtml/dist/vhtml.js\\");
    module.exports = function(data) {
      with(data) {
        Object.defineProperty(exports, \\"__esModule\\", {
value: true
});
exports.default = void 0;

var _default = h(\\"html\\", null, h(\\"head\\", null, h(\\"title\\", null, \\"no-jsx fixture\\")), h(\\"body\\", null, h(\\"h1\\", null, \\"an example\\")));

exports.default = _default;
        return exports.default || module.exports;
      }
    }"
`;

exports[`vhtml-loader simple jsx compilation handles a file with a commonjs export 1`] = `
<html>
  <head>
    <title>
      commonjs fixture
    </title>
  </head>
  <body>
    <h1>
      an example
    </h1>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with a props object spread 1`] = `
<html>
  <head>
    <title>
      props spread fixture
    </title>
  </head>
  <body>
    <div classname="big"
         aria-live="false"
    >
    </div>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with jsx functions 1`] = `
<html>
  <head>
    <title>
      looping fixture
    </title>
  </head>
  <body>
    <p>
      some of my favorite planets are:
    </p>
    <ul>
      <div key="0">
        <h2>
          mars
        </h2>
        <p>
          it&apos;s planet #4 from the sun
        </p>
        <p>
          according to my research it is
        </p>
        <ul>
          <li>
            dusty
          </li>
          <li>
            red
          </li>
        </ul>
      </div>
      <div key="1">
        <h2>
          mercury
        </h2>
        <p>
          it&apos;s planet #1 from the sun
        </p>
        <p>
          according to my research it is
        </p>
        <ul>
          <li>
            rocky
          </li>
          <li>
            hot
          </li>
          <li>
            tiny
          </li>
        </ul>
      </div>
      <div key="2">
        <h2>
          neptune
        </h2>
        <p>
          it&apos;s planet #7 from the sun
        </p>
        <p>
          according to my research it is
        </p>
        <ul>
          <li>
            big
          </li>
          <li>
            blue
          </li>
          <li>
            gassy
          </li>
        </ul>
      </div>
      <div key="3">
        <h2>
          saturn
        </h2>
        <p>
          it&apos;s planet #9 from the sun
        </p>
        <p>
          according to my research it is
        </p>
        <ul>
          <li>
            ringed
          </li>
        </ul>
      </div>
    </ul>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with jsx interpolation 1`] = `
<html>
  <head>
    <title>
      interpolation fixture
    </title>
  </head>
  <body>
    <h1>
      an example
    </h1>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with jsx loops 1`] = `
<html>
  <head>
    <title>
      looping fixture
    </title>
  </head>
  <body>
    <p>
      some of my favorite planets are:
    </p>
    <ul>
      <li key="0">
        mars
      </li>
      <li key="1">
        mercury
      </li>
      <li key="2">
        neptune
      </li>
      <li key="3">
        saturn
      </li>
    </ul>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with no jsx 1`] = `
<html>
  <head>
    <title>
      no-jsx fixture
    </title>
  </head>
  <body>
    <h1>
      an example
    </h1>
  </body>
</html>
`;

exports[`vhtml-loader simple jsx compilation handles a file with react imported in scope 1`] = `
<html>
  <body>
    <h1>
      2 + 2 is 4
    </h1>
  </body>
</html>
`;
